--- a/style.css
+++ b/style.css
@@ -249,10 +249,11 @@ a:hover{
 
 .service{
     height: 100vh;
-    background-image: url(./assets/images/service-bg.png);
+    /* background-image: url(./assets/images/service-bg.png); */
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 100% 100%;
+    transition: all 0.3s linear;
 }
 
 .service-title{
