--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,6 +101,7 @@ a:hover{
 
 /* header pc */
 .header{
+    position: relative;
     height: 80px;
     background-image: linear-gradient(180deg, #2778B5 11%, rgba(95, 85, 69, 0) 79%);
 }
@@ -471,6 +472,7 @@ a:hover{
 
 .soft-menu__item i {
   padding-right: 8px;
+  font-size: 14px;
 }
 
 .soft-menu__item:hover a {
@@ -585,4 +587,43 @@ a:hover{
 .mission{
     padding: 30px 0;
     background-color: #F2FCFF;
+}
+
+/* language */
+
+.dropdown{
+    position: absolute;
+    right: 4%;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.dropdown button{
+    padding: 8px 20px;
+    font-size: 12px;
+    border: 2px solid #0099FF;
+    border-radius: 10px;
+}
+
+.dropdown-menu{
+    min-width: unset;
+    border-radius: 10px;
+    padding: 0;
+}
+
+.dropdown-menu a{
+    color: #fff !important;
+}
+
+.dropdown-menu a:hover{
+    border-radius: 10px;
+}
+
+.dropdown-menu a:hover,
+.dropdown-menu,
+.btn-secondary,
+.btn-secondary:hover{
+    font-family: 'Cormorant SC', serif;
+    font-weight: 800;
+    background-color: #95E8FF !important;
 }
